package com.springboot.MyTodoList.web.features.summaryjob;

public enum SummaryJobStatus {
    PENDING,
    PROCESSING,
    SENT,
    FAILED
}
